syntax = "proto2";
package proto;

enum FOO {
  BAR = 1;
}

message ChannelPreferences {
  required string channel_id = 1;
  string pref_code  = 2;
  int32 number_0 = 3;
  int32 number_1 = 4;
}